scroll issue on iOS

--- a/public/request-donation-styles.css
+++ b/public/request-donation-styles.css
@@ -56,7 +56,7 @@
     visibility: hidden;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
+    overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
     background: rgba(49, 49, 49, 0.9);
     opacity: 0;
